--- a/templates/core/task_list.html
+++ b/templates/core/task_list.html
@@ -1,1 +1,15 @@
 {% extends "base.html" %}
+{% block title %}Tasks{% endblock %}
+{% block content %}
+  <h1>TODO list</h1>
+  {% if task_list %}
+    <ul>
+      {% for task in task_list %}
+        <li>{{ task.name }}</li>
+        <p>{{ task.datetime }}</p>
+      {% endfor %}
+    </ul>
+  {% else %}
+    <p>There are no tasks</p>
+  {% endif %}
+{% endblock %}
