--- a/templates/core/task_list.html
+++ b/templates/core/task_list.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 {% block title %}Tasks{% endblock %}
 {% block content %}
-  <h1>TODO list</h1>
+  <h1>TODO list <a href="{% url 'core:task_create' %}">+</a></h1>
   {% if task_list %}
     <ul>
       {% for task in task_list %}
-        <li>{{ task.name }}</li>
-        <p>{{ task.datetime }}</p>
+        <li><strong>{{ task.content }}</strong></li>
+        <p>{{ task.created_at }}</p>
+        <p>Tags: {% for tag in task.tags.all %} {{ tag.name }}{% endfor %}{% empty %}No tags!</p>
       {% endfor %}
     </ul>
   {% else %}
