--- a/templates/core/task_list.html
+++ b/templates/core/task_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Tasks{% endblock %}
+{% block title %}<title>Tasks</title>{% endblock %}
 {% block content %}
   <h1>TODO list <a href="{% url 'core:task_create' %}">+</a></h1>
   {% if task_list %}
