--- a/templates/core/tags_list.html
+++ b/templates/core/tags_list.html
@@ -1,1 +1,40 @@
 {% extends "base.html" %}
+
+{% block content %}
+  <h1>Tag list <a href="{% url "core:tags_create" %}">+</a></h1>
+
+  {% if tag_list %}
+    <table class="table">
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Update</th>
+        <th>Delete</th>
+      </tr>
+
+      {% for tag in tag_list %}
+        <tr>
+          <td>
+            {{ tag.id }}
+          </td>
+          <td>
+            {{ tag.name }}
+          </td>
+          <td>
+            <form action="{% url 'core:tags_update' pk=tag.id %}" method="get">
+              <button type="submit" class="btn btn-primary">UPDATE</button>
+            </form>
+          </td>
+          <td>
+            <form action="{% url 'core:tags_delete' pk=tag.id %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-danger">DELETE</button>
+            </form>
+          </td>
+        </tr>
+      {% endfor %}
+    </table>
+  {% else %}
+    <p>There are no tags.</p>
+  {% endif %}
+{% endblock %}
