--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         {% include "includes/sidebar.html" %}
       {% endblock %}
     </div>
-    <div class="col-sm-10 ">
+    <div class="col-sm-10" style="margin-top: 20px">
       {% block content %}{% endblock %}
     </div>
   </div>
