fix tags and task confirm delete templates

--- a/templates/core/task_confirm_delete.html
+++ b/templates/core/task_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>Delete Task</h1>
-  <p>Are you sure you want to delete task: {{ task }}?</p>
+  <p>Are you sure you want to delete task: {{ task.content }}?</p>
   <form action="" method="post">
     {% csrf_token %}
     <input type="submit" value="Yes, I want!!!" class="btn-danger">
