--- a/templates/core/tags_confirm_delete.html
+++ b/templates/core/tags_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>Delete Tags</h1>
-  <p>Are you sure you want to delete tag: {{ tag }}?</p>
+  <p>Are you sure you want to delete tag: {{ tag.name }}?</p>
   <form action="" method="post">
     {% csrf_token %}
     <input type="submit" value="Yes, I want!!!" class="btn-danger">
